Change department heading to custom name in user download

--- a/views/user.tt
+++ b/views/user.tt
@@ -62,7 +62,7 @@
             [% IF site.register_show_organisation %]
                 <div class="form-group">
                     <label for="organisation">
-                        [% site.register_organisation_name %]:
+                        [% site.register_organisation_name | html %]:
                         [% IF page.match("user") %]
                             <button type="button" class="btn btn-default" data-toggle="modal" data-target="#submitneworganisation">Add organisation</button>
                         [% END %]
@@ -80,9 +80,9 @@
             [% IF site.register_show_department %]
                 <div class="form-group">
                     <label for="department">
-                        [% site.register_department_name %]:
+                        [% site.department_name | html %]:
                         [% IF page.match("user") %]
-                            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#submitnewdepartment">Add [% site.register_department_name %]</button>
+                            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#submitnewdepartment">Add [% site.department_name | html %]</button>
                         [% END %]
                     </label>
                     <select class="form-control" id="department_id" name="department_id">
@@ -162,16 +162,16 @@
             </div>
 
             [% WRAPPER modal_dialog.tt modal_id="submitneworganisation" modal_action_text="Create new " _ site.register_organisation_name modal_heading="Add " _ site.register_organisation_name %]
-                <p>Please enter the name of a new [% site.register_organisation_name %]:</p>
+                <p>Please enter the name of a new [% site.register_organisation_name | html %]:</p>
                 <div class="form-group">
-                    <input type="text" class="form-control" id="neworganisation" name="neworganisation" placeholder="New [% site.register_organisation_name %]">
+                    <input type="text" class="form-control" id="neworganisation" name="neworganisation" placeholder="New [% site.register_organisation_name | html %]">
                 </div>
             [% END %]
 
-            [% WRAPPER modal_dialog.tt modal_id="submitnewdepartment" modal_action_text="Create new " _ site.register_department_name modal_heading="Add " _ site.register_department_name %]
-                <p>Please enter the name of a new [% site.register_department_name %]:</p>
+            [% WRAPPER modal_dialog.tt modal_id="submitnewdepartment" modal_action_text="Create new " _ site.department_name modal_heading="Add " _ site.department_name %]
+                <p>Please enter the name of a new [% site.department_name | html %]:</p>
                 <div class="form-group">
-                    <input type="text" class="form-control" id="newdepartment" name="newdepartment" placeholder="New [% site.register_department_name %]">
+                    <input type="text" class="form-control" id="newdepartment" name="newdepartment" placeholder="New [% site.department_name | html %]">
                 </div>
             [% END %]
 
