--- a/handlebars/timelineitem.handlebars
+++ b/handlebars/timelineitem.handlebars
@@ -1,5 +1,7 @@
-<div class="item-popup" >
-    <div class="item-popup-inner" >
+<div class="timeline-tippy"
+    data-tippy-sticky="true"
+    data-tippy-interactive="true"
+    data-tippy-content='<div>
         <b>Record {{current_id}}</b><br>
         <ul class="list-unstyled">
             {{#each values}}
@@ -8,8 +10,12 @@
         </ul>
         <a class = "moreinfo" data-record-id="{{current_id}}">Read more</a> |
         <a href="/edit/{{current_id}}">Edit item</a>
-    </div>
-</div>
-<div class="timeline-item-shown-content">
-    {{content}}
+    </div>'
+    data-tippy-animation="scale"
+    data-tippy-duration="0"
+    data-tippy-followCursor="initial"
+    data-tippy-arrow="true"
+    data-tippy-delay="[200, 200]"
+  >
+  {{content}}
 </div>
