--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -3,11 +3,7 @@
 <!--[if gt IE 8]><!--><html lang="en"><!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        [% IF page == "data" AND viewtype == "graph" %]
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        [% ELSE %]
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        [% END %]
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
@@ -38,10 +34,10 @@
             <link rel="stylesheet" href="[% url.css %]/bootstrap-datepicker.min.css" />
             <link rel="stylesheet" href="[% url.css %]/bootstrap-select.min.css" />
         [% END %]
-        [% IF page == "data" AND viewtype == "calendar" %]
+        [% IF page == "data_calendar" %]
             <link rel="stylesheet" href="[% url.css %]/calendar.min.css">
         [% END %]
-        [% IF page == "data" AND viewtype == "timeline" %]
+        [% IF page == "data_timeline" %]
             <link rel="stylesheet" href="[% url.css %]/timeline.min.css">
             <link rel="stylesheet" href="[% url.css %]/tippy.css">
             <link rel="stylesheet" href="[% url.css %]/light.css">
@@ -116,7 +112,9 @@
 
         [%
             full_width_pages = {
-                data => 1
+                data_timeline => 1,
+                data_table => 1,
+                data_calendar => 1
             }
         %]
 
@@ -215,7 +213,7 @@
                 <script type="text/javascript" src="[% url.js %]/selectivizr-min.js"></script>
             <![endif]-->
         [% END %]
-        [% IF page == "data" AND viewtype == "graph" %]
+        [% IF page == "data_graph" %]
             <!--[if lt IE 9]><script language="javascript" type="text/javascript" src="/js/excanvas.min.js"></script><![endif]-->
             <script language="javascript" type="text/javascript" src="[% url.js %]/jquery.jqplot.min.js"></script>
             <script language="javascript" type="text/javascript" src="[% url.js %]/jqplot/jqplot.highlighter.min.js"></script>
@@ -241,10 +239,10 @@
         [% IF page.match('(view|edit|layout|bulk|data)') %]
             <script type="text/javascript" src="[% url.js %]/bootstrap3-typeahead.min.js"></script>
         [% END %]
-        [% IF page == "data" AND viewtype == "calendar" %]
+        [% IF page == "data_calendar" %]
             <script type="text/javascript" src="[% url.js %]/calendar.min.js"></script>
         [% END %]
-        [% IF page == "data" AND viewtype == "timeline" %]
+        [% IF page == "data_timeline" %]
             [% IF page_as_mech %]
                 <script type="text/javascript" src="[% url.js %]/requestAnimationFrame.min.js"></script>
                 [% IF hostlocal %]
@@ -256,21 +254,21 @@
             <script type="text/javascript" src="[% url.js %]/timeline.min.js"></script>
             <script type="text/javascript" src="[% url.js %]/tippy.min.js"></script>
         [% END %]
-        [% IF page == "data" AND viewtype == "globe" %]
+        [% IF page == "data_globe" %]
             [% IF hostlocal %]
                 <script type="text/javascript" src="[% url.js %]/plotly-geo-1.38.2.js"></script>
             [% ELSE %]
                 <script type="text/javascript" src="[% schema %]://cdn.plot.ly/plotly-geo-1.38.2.min.js"></script>
             [% END %]
         [% END %]
-        [% IF page == "data" AND viewtype == "table" %]
+        [% IF page == "data_table" %]
             [% IF hostlocal %]
                 <script type="text/javascript" src="[% url.js %]/jquery.floatThead-slim.min.js"></script>
             [% ELSE %]
                 <script type="text/javascript" src="[% scheme %]://cdnjs.cloudflare.com/ajax/libs/floatthead/1.2.8/jquery.floatThead-slim.min.js"></script>
             [% END %]
         [% END %]
-        [% IF page == "data" %]
+        [% IF page.match("data") %]
             <script type='text/javascript' src='[% url.js %]/fontdetect.min.js'></script>
         [% END %]
         [% IF page == "config" || page == "system" %]
