Improve downloads of timeline
This attempts to make it easier for users to download and print the
timeline. It removes the need to specify size - the latest version of
timeline.js does a much better job of autosizing. It also provides a PDF
option. This is set to download at A3 landscape. Attempts to make this
also auto-size didn't work, so instead this should download as always A3
wide and then will produce as many pages as needed long.

This also required a customised version of Bootstrap CSS, to stop it
removing all colour from a page. Use http://getbootstrap.com/customize/
and deselect "print media styles". See
https://stackoverflow.com/questions/33410724/bootstrap-print-css-removes-background-color

--- a/views/data.tt
+++ b/views/data.tt
@@ -137,7 +137,15 @@
                         <a class="btn btn-default" data-toggle="modal" data-target="#modal_timeline" role="button">Timeline options...</a>
                     </div>
                     <div class="btn-group">
-                        <a class="btn btn-default" data-toggle="modal" data-target="#modal_png" role="button">Download...</a>
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false" aria-controls="menu_action">
+                                Download <span class="caret"></span>
+                        </button>
+                        <ul id="menu_action" class="dropdown-menu" role="menu">
+                            <li role="presentation">
+                                <a role="menuitem" href="/[% layout.identifier %]/data?png=1">Download as PNG image</a>
+                                <a role="menuitem" href="/[% layout.identifier %]/data?pdf=1">Download as PDF document</a>
+                            </li>
+                        </ul>
                     </div>
                 [% ELSIF viewtype == "globe" %]
                     <div class="btn-group">
