Render timeline PDF better
The previously calculated figure for the width of the timeline PDF
didn't seem to work, at least with the latest stable version of
PhantomJS. The updated version seems to work, although purely from trial
and error - it doesn't seem to match what are defined values for the
default of 75dpi. Setting the DPI in PhantomJS is supported in the
latest master branch but not the latest binary.

--- a/views/data_timeline.tt
+++ b/views/data_timeline.tt
@@ -11,7 +11,7 @@
          <div class="loader"></div>
     </div>
     <div id="visualization" data-records="[% records %]" data-groups="[% groups %]" data-rewind="[% session.rewind %]"
-        data-width="[% tl_options.width %]" data-height="[% tl_options.height %]" data-min="[% timeline.min %]"
+        data-width="[% tl_options.canvas_width %]" data-height="[% tl_options.canvas_height %]" data-min="[% timeline.min %]"
         data-max="[% timeline.max %]">
     </div>
 </div>
