Further attempts to improve timeline PDF render
The previous timeline rendering was still hit-and-miss for
correctly-sized PDFs. Various attempts were made to use DPI
specifications for PhantomJS, all without success.

This commit removes the attempt to specify the actual width of the
timeline as an absolute value, and instead specifies it as 100%, along
with reducing the zoom so that more fits on the page.

--- a/views/data_timeline.tt
+++ b/views/data_timeline.tt
@@ -12,7 +12,7 @@
     </div>
     <div id="visualization" data-records="[% records %]" data-groups="[% groups %]" data-rewind="[% session.rewind %]"
         data-width="[% tl_options.canvas_width %]" data-height="[% tl_options.canvas_height %]" data-min="[% timeline.min %]"
-        data-max="[% timeline.max %]">
+        data-max="[% timeline.max %]" style="width:100%">
     </div>
 </div>
 
