--- a/views/snippets/datum.tt
+++ b/views/snippets/datum.tt
@@ -10,9 +10,9 @@
     <table class="table-curcommon">
         [% FOR link IN curval.links %]
                 <tr role="button" tabindex="0" class="record-popup" data-record-id="[% link.id %]">
-                    [% FOREACH value IN link.values %]
-                        <td>
-                            [% value | html %]
+                    [% FOREACH col IN link.presentation.columns %]
+                        <td class="[% col.type %]">
+                            [% render_datum(col) %]
                         </td>
                     [% END %]
                 </tr>
