--- a/views/layout.tt
+++ b/views/layout.tt
@@ -77,6 +77,13 @@
         <input type="text" class="form-control" id="name_short" name="name_short" value="[% column.name_short | html_entity %]">
     </div>
     <div class="form-group">
+        <label for="width">Width of form field:</label>
+        <select class="form-control" id="width" name="width">
+            <option value="50" [% IF NOT column.width OR column.width == "50" %]selected[% END %]>Half-width</option>
+            <option value="100" [% IF NOT column.width OR column.width == "100" %]selected[% END %]>Full-width</option>
+        </select>
+    </div>
+    <div class="form-group">
         <label for="link_parent_id">Link to a field in another table:</label>
         [% IF instance_layouts.size %]
             <select class="form-control" id="link_parent_id" name="link_parent_id">
