--- a/views/layout.tt
+++ b/views/layout.tt
@@ -151,7 +151,14 @@
                 </select>
             </div>
             <div class="form-group col-md-12">
-                matches
+                <select class="form-control" id="display_matchtype" name="display_matchtype">
+                    <option value="exact" [% IF column.display_matchtype == "exact" %]selected[% END %]>matches exactly</option>
+                    <option value="contains" [% IF column.display_matchtype == "contains" %]selected[% END %]>contains</option>
+                    <option value="exact_negative" [% IF column.display_matchtype == "exact_negative" %]selected[% END %]>exactly does not match</option>
+                    <option value="contains_negative" [% IF column.display_matchtype == "contains_negative" %]selected[% END %]>does not contain</option>
+                </select>
+            </div>
+            <div class="form-group col-md-12">
                 <label for="display_regex">pattern</label>
                 [% whats_this('modalhelp_match') %]
                 <input type="text" class="form-control" id="display_regex" name="display_regex" value="[% column.display_regex | html_entity %]">
