--- a/views/layout.tt
+++ b/views/layout.tt
@@ -80,7 +80,7 @@
         <label for="width">Width of form field:</label>
         <select class="form-control" id="width" name="width">
             <option value="50" [% IF NOT column.width OR column.width == "50" %]selected[% END %]>Half-width</option>
-            <option value="100" [% IF NOT column.width OR column.width == "100" %]selected[% END %]>Full-width</option>
+            <option value="100" [% IF column.width == "100" %]selected[% END %]>Full-width</option>
         </select>
     </div>
     <div class="form-group">
